--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,18 @@
     "require": {
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "~1.0",
         "yajra/laravel-datatables": "*",
         "yajra/laravel-datatables-oracle": "*"
     },
     "require-dev": {
+        "beyondcode/laravel-dump-server": "^1.2",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0",
-        "nunomaduro/collision": "^2.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^7.5",
         "symfony/thanks": "^1.0"
     },
     "autoload": {
